--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
     </div>
 -->
 
-    <ul id="länkarna">
+<div id="navigationMenu">
+    <button id="navigationButton" onclick="openNav()">
+        ☰ 
+    </button>
+    <div id="navigationContent">
+        <ul id="länkarna">
 
-    </ul>
+        </ul>
+    </div>
+</div>
     
     
 
