--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </button>
             <div id="navigationContent">
                 <ul id="länkarna">
+
                 </ul>
             </div>
         </div>
@@ -83,6 +84,10 @@
         <img>
         <span id="closeLightbox"><img src="./assets/img/52-521935_close-button-png-4146178793.png"> </span>
     </div>
+
+
+    <article id="articleContent"> </article>
+
 
 
     <script src="./assets/js/main.js"></script>
