nav funkar kanske

--- a/pages/ssp.html
+++ b/pages/ssp.html
@@ -9,7 +9,7 @@
     <title>Sten, sax & påse</title>
 </head>
 <body>
-    
+    <h2>hej</h2>
 
 
     <script src="../assets/js/main.js"></script> <!-- importera main.js (OBS ../ )-->
