--- a/index.html
+++ b/index.html
@@ -71,19 +71,7 @@
     </select>
 
 
-    <div id="thumbnails">
-        <img src="./assets/img/lightbox_images/bild_1_tumme.jpg" data-bigpic="./assets/img/lightbox_images/bild_1.jpg">
-        <img src="./assets/img/lightbox_images/bild_2_tumme.jpg" data-bigpic="./assets/img/lightbox_images/bild_2.jpg">
-        <img src="./assets/img/lightbox_images/bild_3_tumme.jpg" data-bigpic="./assets/img/lightbox_images/bild_3.jpg">
-        <img src="./assets/img/lightbox_images/bild_4_tumme.jpg" data-bigpic="./assets/img/lightbox_images/bild_4.jpg">
-        <img src="./assets/img/lightbox_images/bild_5_tumme.jpg" data-bigpic="./assets/img/lightbox_images/bild_5.jpg">
-        <img src="./assets/img/lightbox_images/bild_6_tumme.jpg" data-bigpic="./assets/img/lightbox_images/bild_6.jpg">
-    </div>
-
-    <div id="lightbox">
-        <img>
-        <span id="closeLightbox"><img src="./assets/img/52-521935_close-button-png-4146178793.png"> </span>
-    </div>
+    
 
 
     <article id="articleContent"> </article>
@@ -91,6 +79,7 @@
 
 
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/gallery.js"></script>
 </body>
 
 </html>
