--- a/pages/ssp.html
+++ b/pages/ssp.html
@@ -9,7 +9,29 @@
     <title>Sten, sax & påse</title>
 </head>
 <body>
-    <h2>hej</h2>
+    <h2>Sten Sax Påse</h2>
+
+    <div id="game">
+
+    <div id="vale">
+        <input name="player" type="radio" value="sten">
+        Sten<br>
+        <input name="player" type="radio" value="sax">
+        Sax<br>
+        <input name="player" type="radio" value="posa">
+        Påse
+    </div>
+
+    <div id="house">
+    <h3 style="font-size:x-large;">Mostståndare</h3>
+    <button type="button" id="placeholder">Placeholder</button>
+    </div>
+
+    <p id="resultat">c</p>
+    </div>
+    
+   
+    <button type="button" id="börjar">Spela</button>
 
 
     <script src="../assets/js/main.js"></script> <!-- importera main.js (OBS ../ )-->
