--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -9,7 +9,8 @@
     <title>Gallery</title>
 </head>
 <body>
-    <h2>gallery</h2>
+    <h2>Galleri</h2>
+    <p>Här ser du hur de tidigare vinnaren lever rikt efter att ha spelat hos oss</p>
 
     <div id="thumbnails">
         <img src="../assets/img/lightbox_images/bild_1_tumme.jpg" data-bigpic="../../assets/img/lightbox_images/bild_1.jpg">
