--- a/pages/ssp.html
+++ b/pages/ssp.html
@@ -21,12 +21,14 @@
 
     <div id="house">
     <h3 style="font-size:x-large;">Mostståndare</h3>
-    <h2 id="houseplay"></h2>
-    </div>
+    <div id="houseplay"></div>
 
-    <div id="resultat"></div>
     </div>
     
+    <div id="resultat"></div>
+    </div>
+    <br>
+    <input type="number" id="bet" placeholder="Place your bet">
    
     
 
