ålder pengar commented

--- a/index.html
+++ b/index.html
@@ -22,17 +22,6 @@
             </div>
         </div>
 
-        <select id="selectDay">
-            <option value="0">Söndag</option>
-            <option value="1">Måndag</option>
-            <option value="2">Tisdag</option>
-            <option value="3">Onsdag</option>
-            <option value="4">Torsdag</option>
-            <option value="5">Fredag</option>
-            <option value="6">Lördag</option>
-        </select>
-
-
         <div class="dropdown-container">
             <button class="knappen">
                 Byt färgtema
@@ -64,26 +53,12 @@
 
 
     <div id="site">
-        
-        <p>
-            <input type="text" id="fname" placeholder="Firstname">
-            <input type="text" id="lname" placeholder="Lastname">
-            <input type="button" value="Sir" onclick="sirClick()">
-            <input type="button" value="Madam" onclick="madamClick()">
-        <div id="username-output"></div>
-        <div id="error-message" style="color: red;"></div>
-        </p>
-
-
+   <h1>Online casino</h1>
         <p>
         <div>Klockan är</div>
         <div id="datum"> </div>
         <div id="klockan"> </div>
         </p>
-
-
-
-
 
         <article id="articleContent"> </article>
 
