--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
 
 
     <div id="site">
-   <h1>Online casino</h1>
-        <p>
-        <div>Klockan är</div>
-        <div id="datum"> </div>
-        <div id="klockan"> </div>
-        </p>
+        <h1>Online casino</h1>
+        <div id="theBox">
+            <div>Klockan är</div>
+            <div id="datum"> </div>
+            <div id="klockan"> </div>
+            <div id="username-output"></div>
+        </div>
+
 
         <article id="articleContent"> </article>
 
