--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -23,7 +23,10 @@
 
     <div id="lightbox">
         <img>
-        <span id="closeLightbox"><img src="../../assets/img/52-521935_close-button-png-4146178793.png"> </span>
+        
+        <svg width="50" height="50" id="closeLightbox">
+            <image href="../../assets/img/52-521935_close-button-png-4146178793.png" width="100%" height="100%" />
+        </svg>
     </div>
 
 
