ålder och pengar utan att "wallet" synns så funkar

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,6 +19,13 @@
         <input type="button" value="Madam" onclick="madamClick()">
     <div id="error-message" style="color: red;"></div>
     </p>
+    <p id="agebet">
+        <input type="number" id="age" placeholder="Age">
+        <input type="number" id="money" placeholder="Amount">
+        <input type="button" value="Set" onclick="check()">
+        <div id="age-error" style="color: red;"></div>
+
+    </p>
 
 
 </body>
