--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,19 @@
     <link rel="stylesheet" href="../assets/css/ssp.css"> <!-- importera sidspecifik CSS vid behov -->
     <title>Home</title>
 </head>
+
 <body>
-    <h2>home</h2>
+    <h2>Home</h2>
+<div id="homeText">
+   <img id="moneyFall" src="../assets/img/4d68cd156b67ed38303691834e7a9628.gif" alt="">
+        <h3> Make your dreams come true!</h3> <br>
+        <p>Har du drömt över ett glamoröst liv med dyra bilar och champanj!</p> <br>
+        <p>Gambla hos oss så kan det bli realitet!</p> <br>
+        <p>Hos oss kan du spela från måndag till fredag.</p> <br>
+        <p>Om du behöver hjälp ring 0800 100101.</p> <br>
+      </div>  
 
 
-    <script src="../assets/js/main.js"></script> <!-- importera main.js (OBS ../ )-->
-    <script src="../assets/js/ssp.js"></script> <!-- importera sidspecifik JS -->
 </body>
+
 </html>
