Skelettet av memory spele

--- a/pages/memory.html
+++ b/pages/memory.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/main.css"> <!-- importera main-CSS-->
-    <link rel="stylesheet" href="../assets/css/ssp.css"> <!-- importera sidspecifik CSS vid behov -->
+    <link rel="stylesheet" href="../assets/css/memory.css"> <!-- importera sidspecifik CSS vid behov -->
     <title>Memory game</title>
 </head>
 <body>
     <h2>Memory spel</h2>
+
+    <div class="container">
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+    </div>
+    <div class="container">
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+    </div>
+
 
 
     <script src="../assets/js/main.js"></script> <!-- importera main.js (OBS ../ )-->
