Correct js fil ti memory

--- a/pages/memory.html
+++ b/pages/memory.html
@@ -25,6 +25,6 @@
 
 
     <script src="../assets/js/main.js"></script> <!-- importera main.js (OBS ../ )-->
-    <script src="../assets/js/ssp.js"></script> <!-- importera sidspecifik JS -->
+    <script src="../assets/js/memory.js"></script> <!-- importera sidspecifik JS -->
 </body>
 </html>
