--- a/pages/memory.html
+++ b/pages/memory.html
@@ -12,14 +12,14 @@
     <h2>Memory spel</h2>
 
     <div class="container">
-        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
-        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
-        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back3"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back2"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back1"></div>
     </div>
     <div class="container">
-        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
-        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
-        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back2"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back1"></div>
+        <div class="cell"><img src="../assets/img/memory_images/background.jpg" id="back3"></div>
     </div>
 
 
